--- a/metropolis/node/core/network/hostsfile/BUILD.bazel
+++ b/metropolis/node/core/network/hostsfile/BUILD.bazel
@@ -9,7 +9,7 @@ go_library(
         "//metropolis/node/core/curator/proto/api",
         "//metropolis/node/core/localstorage",
         "//metropolis/node/core/network",
-        "//metropolis/node/core/roleserve",
+        "//metropolis/pkg/event",
         "//metropolis/pkg/supervisor",
         "//metropolis/proto/common",
         "@org_golang_google_grpc//:go_default_library",
