--- a/metropolis/node/core/roleserve/BUILD.bazel
+++ b/metropolis/node/core/roleserve/BUILD.bazel
@@ -11,6 +11,7 @@ go_library(
         "worker_clusternet.go",
         "worker_controlplane.go",
         "worker_heartbeat.go",
+        "worker_hostsfile.go",
         "worker_kubernetes.go",
         "worker_nodemgmt.go",
         "worker_rolefetch.go",
@@ -28,6 +29,7 @@ go_library(
         "//metropolis/node/core/localstorage",
         "//metropolis/node/core/mgmt",
         "//metropolis/node/core/network",
+        "//metropolis/node/core/network/hostsfile",
         "//metropolis/node/core/rpc",
         "//metropolis/node/core/rpc/resolver",
         "//metropolis/node/kubernetes",
