cloud/shepherd/equinix/manager: embed test_agent
Change-Id: Iee2c1f68350412a49fae9fe2b80ab70a12b1a618
Reviewed-on: https://review.monogon.dev/c/monogon/+/1505
Tested-by: Jenkins CI
Reviewed-by: Serge Bazanski <serge@monogon.tech>

--- a/cloud/shepherd/equinix/manager/server/BUILD.bazel
+++ b/cloud/shepherd/equinix/manager/server/BUILD.bazel
@@ -33,7 +33,10 @@ container_image(
     name = "server_container",
     base = "@go_image_base//image",
     entrypoint = ["/app/cloud/shepherd/equinix/manager/server/server_/server"],
-    tars = [":server_layer"],
+    tars = [
+        ":server_layer",
+        "//cloud/shepherd/equinix/manager/test_agent:test_agent_layer",
+    ],
     visibility = ["//visibility:public"],
     workdir = "/app",
 )
