cloud/shepherd/equinix/manager: embed takeover agent
Change-Id: Ibd3841dfe9d6e40042b1812d335eec3025841db1
Reviewed-on: https://review.monogon.dev/c/monogon/+/1510
Tested-by: Jenkins CI
Reviewed-by: Lorenz Brun <lorenz@monogon.tech>

--- a/cloud/shepherd/equinix/manager/server/BUILD.bazel
+++ b/cloud/shepherd/equinix/manager/server/BUILD.bazel
@@ -35,7 +35,7 @@ container_image(
     entrypoint = ["/app/cloud/shepherd/equinix/manager/server/server_/server"],
     tars = [
         ":server_layer",
-        "//cloud/shepherd/equinix/manager/test_agent:test_agent_layer",
+        "//cloud/takeover:takeover_layer",
     ],
     visibility = ["//visibility:public"],
     workdir = "/app",
