--- a/metropolis/node/core/network/dns/BUILD.bazel
+++ b/metropolis/node/core/network/dns/BUILD.bazel
@@ -11,6 +11,7 @@ go_library(
     deps = [
         "//metropolis/pkg/fileargs",
         "//metropolis/pkg/supervisor",
+        "@org_golang_x_sys//unix",
     ],
 )
 
