c/takeover: add fallback DNS servers
As it's not possible to reliably dump DNS servers from a Linux system,
add Google's and Cloudflare's public DNS servers if none were found.

Change-Id: Id9dd3a884217cccc0260bd61514aeb545874c708
Reviewed-on: https://review.monogon.dev/c/monogon/+/1522
Reviewed-by: Tim Windelschmidt <tim@monogon.tech>
Tested-by: Jenkins CI

--- a/cloud/takeover/BUILD.bazel
+++ b/cloud/takeover/BUILD.bazel
@@ -17,6 +17,7 @@ go_library(
         "//metropolis/pkg/bootparam",
         "//metropolis/pkg/kexec",
         "//net/dump",
+        "//net/proto",
         "@com_github_cavaliergopher_cpio//:cpio",
         "@com_github_pierrec_lz4_v4//:lz4",
         "@org_golang_google_protobuf//proto",
