cloud/bmaa/reflection: render known protos as prototext
This extends the type and value structures of the reflection code to
support arbitrary Protobuf serialized messages. We currently identify
what message type is contained in a column by a hardcoded lookup table.

Change-Id: I31a260b7ed5582678803d27bf6ba30028cbea266
Reviewed-on: https://review.monogon.dev/c/monogon/+/1539
Reviewed-by: Leopold Schabel <leo@monogon.tech>
Tested-by: Jenkins CI

--- a/cloud/bmaas/bmdb/BUILD.bazel
+++ b/cloud/bmaas/bmdb/BUILD.bazel
@@ -33,9 +33,12 @@ go_test(
     ],
     embed = [":bmdb"],
     deps = [
+        "//cloud/agent/api",
         "//cloud/bmaas/bmdb/model",
         "//cloud/bmaas/bmdb/reflection",
+        "//cloud/bmaas/server/api",
         "//cloud/lib/component",
         "@com_github_google_uuid//:uuid",
+        "@org_golang_google_protobuf//proto",
     ],
 )
