--- a/cloud/bmaas/bmdb/reflection/BUILD.bazel
+++ b/cloud/bmaas/bmdb/reflection/BUILD.bazel
@@ -9,8 +9,12 @@ go_library(
     importpath = "source.monogon.dev/cloud/bmaas/bmdb/reflection",
     visibility = ["//visibility:public"],
     deps = [
+        "//cloud/bmaas/server/api",
         "@com_github_google_uuid//:uuid",
         "@com_github_iancoleman_strcase//:strcase",
         "@io_k8s_klog_v2//:klog",
+        "@org_golang_google_protobuf//encoding/prototext",
+        "@org_golang_google_protobuf//proto",
+        "@org_golang_google_protobuf//reflect/protoreflect",
     ],
 )
