cloud/shepherd/equinix: update provider extra data
This adds a new sub-component to the Equinix Shepherd, the Updater.

The Updater periodically scans all machines backed by the Equinix
provider in the BMDB and queries the Equinix API for their status. The
status then populates the new 'Provided' row data.

Change-Id: I99657545aabfb13d71e165d36ce549c852feaf49
Reviewed-on: https://review.monogon.dev/c/monogon/+/1578
Tested-by: Jenkins CI
Reviewed-by: Lorenz Brun <lorenz@monogon.tech>

--- a/cloud/shepherd/equinix/manager/BUILD.bazel
+++ b/cloud/shepherd/equinix/manager/BUILD.bazel
@@ -10,6 +10,7 @@ go_library(
         "recoverer.go",
         "shared_config.go",
         "ssh.go",
+        "updater.go",
     ],
     importpath = "source.monogon.dev/cloud/shepherd/equinix/manager",
     visibility = ["//visibility:public"],
@@ -38,6 +39,7 @@ go_test(
         "initializer_test.go",
         "provisioner_test.go",
         "recoverer_test.go",
+        "updater_test.go",
     ],
     data = [
         "//cloud/shepherd/equinix/manager/test_agent",
