c/bmaas/bmsrv: use clicontext
Change-Id: Idb5e43ef38e1ae294409cf1c99d88426623f824e
Reviewed-on: https://review.monogon.dev/c/monogon/+/1598
Tested-by: Jenkins CI
Reviewed-by: Tim Windelschmidt <tim@monogon.tech>

--- a/cloud/bmaas/server/cmd/BUILD.bazel
+++ b/cloud/bmaas/server/cmd/BUILD.bazel
@@ -7,7 +7,10 @@ go_library(
     srcs = ["main.go"],
     importpath = "source.monogon.dev/cloud/bmaas/server/cmd",
     visibility = ["//visibility:private"],
-    deps = ["//cloud/bmaas/server"],
+    deps = [
+        "//cloud/bmaas/server",
+        "//metropolis/cli/pkg/context",
+    ],
 )
 
 go_binary(
