m/p/common: set visibility to public
To allow usage inside cloud tooling the visibility needs to be public

Change-Id: Ibcc4ca969e2de31c95f8ab8479ce2d7f4fb740d7
Reviewed-on: https://review.monogon.dev/c/monogon/+/1601
Reviewed-by: Serge Bazanski <serge@monogon.tech>
Tested-by: Jenkins CI

--- a/metropolis/proto/common/BUILD.bazel
+++ b/metropolis/proto/common/BUILD.bazel
@@ -22,5 +22,5 @@ go_library(
     name = "common",
     embed = [":common_go_proto"],
     importpath = "source.monogon.dev/metropolis/proto/common",
-    visibility = ["//metropolis:__subpackages__"],
+    visibility = ["//visibility:public"],
 )
