cloud/agent: default to detected NetworkConfig installing OS
The agent should pick the detected NetworkConfig if the OSInstallRequest
does not contain a NetworkConfig

Change-Id: I27f75735907b7c993dcd7002a863cd8fe00699fa
Reviewed-on: https://review.monogon.dev/c/monogon/+/1602
Tested-by: Jenkins CI
Reviewed-by: Serge Bazanski <serge@monogon.tech>

--- a/cloud/agent/BUILD.bazel
+++ b/cloud/agent/BUILD.bazel
@@ -25,6 +25,7 @@ go_library(
         "//metropolis/pkg/scsi",
         "//metropolis/pkg/smbios",
         "//metropolis/pkg/supervisor",
+        "//net/proto",
         "@com_github_cenkalti_backoff_v4//:backoff",
         "@com_github_mdlayher_ethtool//:ethtool",
         "@com_github_vishvananda_netlink//:netlink",
