--- a/metropolis/node/core/localstorage/crypt/BUILD.bazel
+++ b/metropolis/node/core/localstorage/crypt/BUILD.bazel
@@ -13,8 +13,11 @@ go_library(
     visibility = ["//metropolis/node/core/localstorage:__subpackages__"],
     deps = [
         "//metropolis/pkg/devicemapper",
+        "//metropolis/pkg/efivarfs",
+        "//metropolis/pkg/gpt",
+        "//metropolis/pkg/supervisor",
         "//metropolis/pkg/sysfs",
-        "@com_github_rekby_gpt//:gpt",
+        "@com_github_google_uuid//:uuid",
         "@org_golang_x_sys//unix",
     ],
 )
