cloud/bmaas/bmdb/webug: rename .html to .gohtml
IntelliJ doesn't like overriding the type manually,
so lets just stick to their standard.

Change-Id: Ie533d884b06c62d6da6b8504051737b239fb8489
Reviewed-on: https://review.monogon.dev/c/monogon/+/1645
Reviewed-by: Serge Bazanski <serge@monogon.tech>
Tested-by: Jenkins CI

--- a/cloud/bmaas/bmdb/webug/BUILD.bazel
+++ b/cloud/bmaas/bmdb/webug/BUILD.bazel
@@ -8,12 +8,12 @@ go_library(
         "webug.go",
     ],
     embedsrcs = [
-        "templates/base.html",
-        "templates/fragment_tag.html",
-        "templates/fragment_tag_default.html",
-        "templates/fragment_tag_provided.html",
-        "templates/machines.html",
-        "templates/machine.html",
+        "templates/base.gohtml",
+        "templates/fragment_tag.gohtml",
+        "templates/fragment_tag_default.gohtml",
+        "templates/fragment_tag_provided.gohtml",
+        "templates/machines.gohtml",
+        "templates/machine.gohtml",
     ],
     importpath = "source.monogon.dev/cloud/bmaas/bmdb/webug",
     visibility = ["//visibility:public"],
