m/n/core/localstorage/crypt: support more enc/auth modes
This is in preparation for introducing configurable disk
encryption/authentication policies in Metropolis (eg. low integrity
mode).

We also use the opportunity to add some tests for the newly refactored
crypt library. All modes go through an end-to-end test making sure data
is preserved and repeatedly mapping/unmapping the device works.

This change also disables insecure mode in debug builds. The equivalent
functionality will be re-established at a higher level in the cluster
code in a subsequent change, alongside the encryption/authentication
policy code.

Change-Id: I85db001c7c37a918cb491b1fcc3a51ea1d715817
Reviewed-on: https://review.monogon.dev/c/monogon/+/1724
Tested-by: Jenkins CI
Reviewed-by: Lorenz Brun <lorenz@monogon.tech>

--- a/metropolis/node/core/localstorage/crypt/BUILD.bazel
+++ b/metropolis/node/core/localstorage/crypt/BUILD.bazel
@@ -1,14 +1,15 @@
-load("@io_bazel_rules_go//go:def.bzl", "go_library")
+load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")
+load("//metropolis/test/ktest:ktest.bzl", "ktest")
 
 go_library(
     name = "crypt",
     # keep
     srcs = [
         "blockdev.go",
-    ] + select({
-        "//metropolis/node:debug_build": ["crypt_debug.go"],
-        "//conditions:default": ["crypt.go"],
-    }),
+        "crypt.go",
+        "crypt_encryption.go",
+        "crypt_integrity.go",
+    ],
     importpath = "source.monogon.dev/metropolis/node/core/localstorage/crypt",
     visibility = ["//metropolis/node/core/localstorage:__subpackages__"],
     deps = [
@@ -20,4 +21,15 @@ go_library(
         "@com_github_google_uuid//:uuid",
         "@org_golang_x_sys//unix",
     ],
+)
+
+go_test(
+    name = "crypt_test",
+    srcs = ["crypt_test.go"],
+    embed = [":crypt"],
+)
+
+ktest(
+    cmdline = "ramdisk_size=4096",
+    tester = ":crypt_test",
 )
