cloud: validate that there are not positional arguments
flag.Parse() parses arguments after boolean flags as positional argument.
This produces unexpected behaviour like this:
```
> -a "true" -b "true"
a: false

> -a -b "true"
b: true
```

Change-Id: I0f8555fc45acf305a5efd365a6eae03eb8930942
Reviewed-on: https://review.monogon.dev/c/monogon/+/1798
Reviewed-by: Serge Bazanski <serge@monogon.tech>
Tested-by: Jenkins CI

--- a/cloud/bmaas/server/cmd/BUILD.bazel
+++ b/cloud/bmaas/server/cmd/BUILD.bazel
@@ -10,6 +10,7 @@ go_library(
     deps = [
         "//cloud/bmaas/server",
         "//metropolis/cli/pkg/context",
+        "@io_k8s_klog_v2//:klog",
     ],
 )
 
