--- a/cloud/apigw/BUILD.bazel
+++ b/cloud/apigw/BUILD.bazel
@@ -7,7 +7,10 @@ go_library(
     srcs = ["main.go"],
     importpath = "source.monogon.dev/cloud/apigw",
     visibility = ["//visibility:private"],
-    deps = ["//cloud/apigw/server"],
+    deps = [
+        "//cloud/apigw/server",
+        "@io_k8s_klog_v2//:klog",
+    ],
 )
 
 go_binary(
