third_party/go: pull in node_exporter, add to metropolis rootfs
Change-Id: I5efe5257e7740bf1721f3dd6f130a3c618e33381
Reviewed-on: https://review.monogon.dev/c/monogon/+/1806
Reviewed-by: Leopold Schabel <leo@monogon.tech>
Tested-by: Jenkins CI

--- a/metropolis/node/BUILD.bazel
+++ b/metropolis/node/BUILD.bazel
@@ -54,6 +54,9 @@ erofs_image(
         "//metropolis/node/core/network/dns:resolv.conf": "/etc/resolv.conf",
         ":os-release-info": "/etc/os-release",
 
+        # Metrics exporters
+        "@com_github_prometheus_node_exporter//:node_exporter": "/metrics/bin/node_exporter",
+
         # Hyperkube
         "//metropolis/node/kubernetes/hyperkube": "/kubernetes/bin/kube",
 
