--- a/.bazelrc
+++ b/.bazelrc
@@ -59,10 +59,8 @@ build --incompatible_enable_proto_toolchain_resolution
 
 # In our monorepo, we mostly ignore the host platform since we bring our own
 # execution environment. However, we still need to run a small number of tools
-# such as gazelle. We can just use rules_go's pure-Go platform. Attempting to
-# build CGO binaries for the host will fail (and does not make sense).
-# The host is lava - it could be NixOS (or even potentially macOS/Windows).
-build --host_platform=@io_bazel_rules_go//go/toolchain:linux_amd64
+# such as gazelle.
+build --host_platform=//build/platforms:linux_amd64
 
 # Target platform for the monorepo is currently the same as the host platform,
 # but we'll support cross-compilation at some point. Do not rely on it.
