.bazelrc: add go tags: {net,osuser}go
This makes our code not use glibc-based implementations of user and host
resolution even when cgo is enabled for race detection.

Change-Id: I162105ef58291dc225fb158b56c93cfb7bce9a54
Reviewed-on: https://review.monogon.dev/c/monogon/+/1834
Tested-by: Jenkins CI
Reviewed-by: Leopold Schabel <leo@monogon.tech>

--- a/.bazelrc
+++ b/.bazelrc
@@ -43,7 +43,7 @@ test --test_output=errors
 #     build k8s without cloud provider and docker support
 # nowasm:
 #     disable wasm plugin support in sqlc
-build --define gotags=selinux,seccomp,no_zfs,no_aufs,no_devicemapper,providerless,dockerless,nowasm
+build --@io_bazel_rules_go//go/config:tags=selinux,seccomp,no_zfs,no_aufs,no_devicemapper,providerless,dockerless,nowasm,netgo,osusergo
 
 # Build with C++17.
 build --cxxopt=-std=c++17
