m/p/gpt: switch to msguid
Replaces the old UUID mangling code with the newly-introduced msguid.

Change-Id: I667e41c28959b4b95265c1ffdcf7f5bfcad4083d
Reviewed-on: https://review.monogon.dev/c/monogon/+/1850
Tested-by: Jenkins CI
Reviewed-by: Serge Bazanski <serge@monogon.tech>

--- a/metropolis/pkg/gpt/BUILD.bazel
+++ b/metropolis/pkg/gpt/BUILD.bazel
@@ -9,7 +9,10 @@ go_library(
     ],
     importpath = "source.monogon.dev/metropolis/pkg/gpt",
     visibility = ["//visibility:public"],
-    deps = ["@com_github_google_uuid//:uuid"],
+    deps = [
+        "//metropolis/pkg/msguid",
+        "@com_github_google_uuid//:uuid",
+    ],
 )
 
 go_test(
