m/n/core/roleserve: persist node roles across reboots
This allows us nodes to attempt to bring up some services before they
get fully connectivity to the cluster.

This is especially useful if a node cannot establish connectivity to the
cluster, eg. because it's the only control plane node that just started
up.

Fixes https://github.com/monogon-dev/monogon/issues/226

Change-Id: I030ccc02851e74ceb8dc043203083aa5b6854b55
Reviewed-on: https://review.monogon.dev/c/monogon/+/1842
Reviewed-by: Lorenz Brun <lorenz@monogon.tech>
Tested-by: Jenkins CI

--- a/metropolis/node/core/roleserve/BUILD.bazel
+++ b/metropolis/node/core/roleserve/BUILD.bazel
@@ -42,6 +42,7 @@ go_library(
         "//metropolis/proto/common",
         "@org_golang_google_grpc//:go_default_library",
         "@org_golang_google_protobuf//encoding/prototext",
+        "@org_golang_google_protobuf//proto",
     ],
 )
 
