metropolis/node: allow all ports as NodePorts except special ones
As we dont have hostPort implemented we can only  provide NodePorts to
applications. To allow apps to use all ports we have to increase the range
but have to prevent them from using reserved metropolis ones. This is
currently prevented by patching the allocator and hardcode all of them.

Change-Id: I7c0e8b17643d1ec03e1a1b678bc6276881b1c5e5
Reviewed-on: https://review.monogon.dev/c/monogon/+/1884
Tested-by: Jenkins CI
Reviewed-by: Lorenz Brun <lorenz@monogon.tech>

--- a/metropolis/node/BUILD.bazel
+++ b/metropolis/node/BUILD.bazel
@@ -14,7 +14,10 @@ go_library(
         "ports.go",
     ],
     importpath = "source.monogon.dev/metropolis/node",
-    visibility = ["//metropolis:__subpackages__"],
+    visibility = [
+        "//metropolis:__subpackages__",
+        "@io_k8s_kubernetes//pkg/registry:__subpackages__",
+    ],
     deps = ["@com_github_vishvananda_netlink//:netlink"],
 )
 
